# zerozero

./: .env  Cargo.toml  Dockerfile  sqlx-data.json
.github/workflows/: audit.yml  general.yml
configuration/: base.yaml  production.yaml
migrations/: 20230401135435_add_status_to_subscriptions.sql  20230401143304_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
